# genuine-axel

./: .dockerignore  .env.example  .gitignore  .webui_secret_key  AGENTS.md  Dockerfile  LICENSE  OPERATIONS for Cyan.md  OPERATIONS.md  README.md  docker-compose.yml  logging.md  memory-system-analysis.md  pyproject.toml
.axnmihn-tasks/: plan.md
.axnmihn-tasks/perf-tasks/: README.md
.claude/commands/: hass.md
.claude/plans/: cached-forging-walrus.md  keen-stargazing-adleman.md  kind-sparking-mochi.md
.claude/rules/: project.md
.github/: copilot-instructions.md
.github/instructions/: analyze-error.instructions.md  performance.instructions.md  security.instructions.md  services.instructions.md  tdd.instructions.md
backend/: app.py  config.py  requirements.txt
backend/api/: __init__.py  audio.py  chat.py  deps.py  mcp.py  media.py  memory.py  openai.py  status.py  utils.py  websocket.py
backend/channels/: __init__.py  bridge.py  manager.py  message_chunker.py  protocol.py
backend/core/: __init__.py  chat_handler.py  context_optimizer.py  errors.py  mcp_client.py  mcp_server.py  mcp_transport.py  research_artifacts.py
backend/llm/: __init__.py  anthropic_client.py  base.py  circuit_breaker.py  clients.py  gemini_client.py  providers.py  router.py
backend/media/: __init__.py  qwen_tts.py  transcribe.py  tts_manager.py  tts_service.py  tts_utils.py  types.py
backend/memory/: __init__.py  cte_traversal.py  current.py  event_buffer.py  graph_rag.py  hybrid_extractor.py  memgpt.py  meta_memory.py  permanent.py  recent.py  temporal.py  unified.py
backend/native/: CMakeLists.txt  README.md  pyproject.toml
backend/native/src/: axnmihn_native.cpp  decay.cpp  decay.hpp  graph_ops.cpp  graph_ops.hpp  string_ops.cpp  string_ops.hpp  vector_ops.cpp  vector_ops.hpp
backend/native/tests/: __init__.py  bench_native.py  test_decay.py  test_vector_ops.py
backend/wake/: conversation.py  detector.py  list_mics.py  list_outputs.py  player.py  run_wake.py
claude_reports/: 00_priority_map.md  01_run_command_injection.md  02_chathandler_god_object.md  03_mcp_server_monolith.md  04_exception_swallowing.md  05_longtermemory_god_class.md  06_session_archive_srp.md  07_path_traversal.md  08_research_server_monolith.md  09_opus_code_duplication.md  10_retry_logic_duplication.md  11_global_mutable_state.md  12_memory_context_duplication.md  13_hardcoded_iot_device_ids.md  14_magic_numbers.md  15_mcp_schema_handler_separation.md  16_app_global_lifespan.md  17_global_exception_info_leak.md  18_mcp_client_dual_call.md  19_test_absence.md  20_import_duplication.md  21_xml_tag_pattern_hardcoded.md  22_hass_http_communication.md  23_migrate_legacy_docstring.md  99_summary.md  MISSION.md
scripts/: axel_chat.py  cleanup_messages.py  dedup_knowledge_graph.py  memory_gc.py  night_ops.py  optimize_memory.py  populate_knowledge_graph.py  regenerate_persona.py
tests/: conftest.py  test_app.py  test_config.py  test_context_service.py  test_graph_rag_config.py  test_text_utils.py  test_unified_context.py
tests/api/: conftest.py  test_app_state.py  test_audio.py  test_deps.py  test_mcp.py  (+5 more)
(+329 files in other folders)
