[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "axnmihn-native"
version = "0.1.0"
description = "C++ native optimizations for axnmihn"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "northprot"}
]
dependencies = [
    "numpy>=1.21"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
wheel.packages = []
wheel.install-dir = "."
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
